--- a/index.html
+++ b/index.html
@@ -162,6 +162,13 @@
         </div> <!--.escenarios-contenedor -->
     </section>
 
+    <section id="galeria" class="galeria">
+        <h3>Galería</h3>
+        <div class="galeria-imagenes">
+            
+        </div>
+    </section>
+
     <section id="boletos" class="contenedor-boletos">
         <h3>Boletos</h3>
     
@@ -205,5 +212,7 @@
     <footer class="footer">
         <p>Techno & EDM Festival. Todos los derechos reservados.</p>
     </footer>
+
+    <script src="build/js/app.js"></script>
 </body>
 </html>
